Upgrade to Unity 2019.4.3, HDRP 7.4.1

--- a/2.5D HDRP/Packages/manifest.json
+++ b/2.5D HDRP/Packages/manifest.json
@@ -6,7 +6,8 @@
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.probuilder": "4.2.3",
     "com.unity.progrids": "3.0.3-preview.6",
-    "com.unity.render-pipelines.high-definition": "7.3.1",
+    "com.unity.render-pipelines.high-definition": "7.4.1",
+    "com.unity.render-pipelines.high-definition-config": "file:../LocalPackages/com.unity.render-pipelines.high-definition-config",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.14",
